<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/sign_up_container_width"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_up_background"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_up_facebook"
            style="@style/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_30"
            android:text="@string/sign_up_facebook" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up_or"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_toStartOf="@id/sign_up_text"
                android:background="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_toEndOf="@id/sign_up_text"
                android:background="@android:color/white" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/sign_up_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_firstname"
                    android:inputType="text"
                    style="@style/sign_up_edit_text" />

                <EditText
                    android:id="@+id/sign_up_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_lastname"
                    android:inputType="text"
                    style="@style/sign_up_edit_text" />

                <EditText
                    android:id="@+id/sign_up_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_username"
                    android:inputType="text"
                    style="@style/sign_up_edit_text" />

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_email"
                    android:inputType="textEmailAddress"
                    style="@style/sign_up_edit_text" />

                <EditText
                    android:id="@+id/sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_phone"
                    android:inputType="phone"
                    style="@style/sign_up_edit_text" />

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_passwoed"
                    android:inputType="textPassword"
                    style="@style/sign_up_edit_text"
                    android:layout_marginBottom="@dimen/margin_20" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/sign_up_button"
            style="@style/button_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/sign_up_sign_up"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/sign_up_terms_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/space_0"
            android:textColor="?lightGrey"/>

    </LinearLayout>

</RelativeLayout>