<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_logo_height"
            android:contentDescription="@null"
            android:src="@drawable/logo_sporting" />


        <LinearLayout
            android:layout_width="@dimen/login_conteiner_width"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_20">


                <TextView
                    android:id="@+id/forgot_password_reset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/forgot_password_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_12" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/half_margin"
                    android:layout_toStartOf="@id/forgot_password_reset_text"
                    android:background="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/half_margin"
                    android:layout_toEndOf="@id/forgot_password_reset_text"
                    android:background="@android:color/white" />
            </RelativeLayout>


            <EditText
                android:id="@+id/forgot_password_email"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_login_email"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center">

                <Button
                    android:id="@+id/forgot_password_resert_button"
                    style="@style/button_login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_button_text" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/forgot_password_progress_bar"
                    android:layout_width="@dimen/prodgres_bar"
                    android:layout_height="@dimen/prodgres_bar"
                    android:layout_centerInParent="true"
                    android:elevation="@dimen/elevation_2"
                    android:visibility="gone"
                    app:indicatorName="LineSpinFadeLoaderIndicator" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>